--- a/my-first-project/src/styles.css
+++ b/my-first-project/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+h1 {
+
+    color: #336;
+    font-size: 250%; 
+    font-weight: lighter;
+
+}
