--- a/my-first-project/src/styles.css
+++ b/my-first-project/src/styles.css
@@ -2,7 +2,31 @@
 h1 {
 
     color: #336;
+    font-family: Geneva, Helvetica, sans-serif;
     font-size: 250%; 
     font-weight: lighter;
+
+}
+
+h2, h3 {
+
+    color: #444;
+    font-family: Geneva, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+
+body {
+
+    margin: 2em;
+}
+
+body, input[type="text"], button {
+    color: 333;
+    font-family: Cambria, Georgia;
+}
+
+/* everywhere else */
+
+* { font-family: Geneva, Helvetica, sans-serif;
 
 }
