--- a/my-first-project/src/styles.css
+++ b/my-first-project/src/styles.css
@@ -1,80 +1,72 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global Styles */
 h1 {
-
-    color: #336;
-    font-family: Geneva, Helvetica, sans-serif;
-    font-size: 250%; 
-    font-weight: lighter;
-
-}
-
-h2, h3 {
-
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+  }
+  h2, h3 {
     color: #444;
-    font-family: Geneva, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
-}
-
-body {
-
+  }
+  body {
     margin: 2em;
-}
-
-body, input[type="text"], button {
-    color: 333;
+  }
+  body, input[text], button {
+    color: #333;
     font-family: Cambria, Georgia;
-}
-
-/* everywhere else */
-
-* { font-family: Geneva, Helvetica, sans-serif;
-
-}
-
-.selected {
-    background-color: #CFD8DC !important;
-    color: white;
   }
-  .heroes {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-  }
-  .heroes li {
+  a {
     cursor: pointer;
-    position: relative;
-    left: 0;
-    background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
-    height: 1.6em;
+    cursor: hand;
+  }
+  button {
+    font-family: Arial;
+    background-color: #eee;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    cursor: hand;
+  }
+  button:hover {
+    background-color: #cfd8dc;
+  }
+  button:disabled {
+    background-color: #eee;
+    color: #aaa;
+    cursor: auto;
+  }
+  
+  /* Navigation link styles */
+  nav a {
+    padding: 5px 10px;
+    text-decoration: none;
+    margin-right: 10px;
+    margin-top: 10px;
+    display: inline-block;
+    background-color: #eee;
     border-radius: 4px;
   }
-  .heroes li.selected:hover {
-    background-color: #BBD8DC !important;
-    color: white;
-  }
-  .heroes li:hover {
+  nav a:visited, a:link {
     color: #607D8B;
-    background-color: #DDD;
-    left: .1em;
   }
-  .heroes .text {
-    position: relative;
-    top: -3px;
+  nav a:hover {
+    color: #039be5;
+    background-color: #CFD8DC;
   }
-  .heroes .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color:#405061;
-    line-height: 1em;
-    position: relative;
-    left: -1px;
-    top: -4px;
-    height: 1.8em;
-    margin-right: .8em;
-    border-radius: 4px 0 0 4px;
+  nav a.active {
+    color: #039be5;
   }
+  
+  /* everywhere else */
+  * {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  
+  /*
+  Copyright Google LLC. All Rights Reserved.
+  Use of this source code is governed by an MIT-style license that
+  can be found in the LICENSE file at http://angular.io/license
+  */
