--- a/my-first-project/src/app/heroes/heroes.component.css
+++ b/my-first-project/src/app/heroes/heroes.component.css
@@ -1,38 +1,37 @@
 /* HeroesComponent's private CSS styles */
-.heroes {
+.selected {
+    background-color: #CFD8DC !important;
+    color: white;
+  }
+  .heroes {
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
     width: 15em;
   }
   .heroes li {
-    position: relative;
     cursor: pointer;
+    position: relative;
+    left: 0;
     background-color: #EEE;
     margin: .5em;
     padding: .3em 0;
     height: 1.6em;
     border-radius: 4px;
   }
-  
+  .heroes li.selected:hover {
+    background-color: #BBD8DC !important;
+    color: white;
+  }
   .heroes li:hover {
     color: #607D8B;
     background-color: #DDD;
     left: .1em;
   }
-  
-  .heroes a {
-    color: #333;
-    text-decoration: none;
+  .heroes .text {
     position: relative;
-    display: block;
-    width: 250px;
+    top: -3px;
   }
-  
-  .heroes a:hover {
-    color:#607D8B;
-  }
-  
   .heroes .badge {
     display: inline-block;
     font-size: small;
@@ -44,11 +43,6 @@
     left: -1px;
     top: -4px;
     height: 1.8em;
-    min-width: 16px;
-    text-align: right;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
   }
-  
-  
-  
