--- a/my-first-project/src/app/heroes/heroes.component.css
+++ b/my-first-project/src/app/heroes/heroes.component.css
@@ -1,4 +1,3 @@
-/* HeroesComponent's private CSS styles */
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -14,13 +13,13 @@
   height: 1.6em;
   border-radius: 4px;
 }
-
+ 
 .heroes li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-
+ 
 .heroes a {
   color: #333;
   text-decoration: none;
@@ -28,11 +27,11 @@
   display: block;
   width: 250px;
 }
-
+ 
 .heroes a:hover {
   color:#607D8B;
 }
-
+ 
 .heroes .badge {
   display: inline-block;
   font-size: small;
@@ -49,10 +48,25 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
-
-
-/*
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
-*/
+ 
+button {
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+  font-family: Arial;
+}
+ 
+button:hover {
+  background-color: #cfd8dc;
+}
+ 
+button.delete {
+  position: relative;
+  left: 194px;
+  top: -32px;
+  background-color: gray !important;
+  color: white;
+}
