--- a/my-first-project/src/app/app.component.css
+++ b/my-first-project/src/app/app.component.css
@@ -1,35 +1,31 @@
+h1 {
+  font-size: 1.2em;
+  margin-bottom: 0;
+
+}
+
 h2 {
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-  body {
-    margin: 2em;
-  }
-  body, input[text], button {
-    color: crimson;
-    font-family: Cambria, Georgia;
-  }
-  
-  button.clear {
-    font-family: Arial;
-    background-color: #eee;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    cursor: hand;
-  }
-  button:hover {
-    background-color: #cfd8dc;
-  }
-  button:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
-  }
-  button.clear {
-    color: #333;
-    margin-bottom: 12px;
-  }
-  
+  font-size: 2em;
+  margin-top: 0;
+  padding-top: 0;
+
+}
+
+nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: azure;
+  border-radius: 4px;
+}
+
+nav aL visited, a:link {
+  color: blue;
+  background-color: white;
+
+}
+
+nav a.acive {
+  color: blue;
+}
